--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,12 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# databases
+*.db
+
+# HTML example files for scraping
+html/
+
+# VSCode stuff
+.vscode/
